configure and makefile from gnu autotools

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,12 @@
 *.swp
 *.dSYM
 *.conf
+Makefile
+aclocal.m4
+autom4te.cache/
+config.log
+config.status
+configure
+nagnu
+src/.deps/
+src/.dirstamp
