--- a/.gitignore
+++ b/.gitignore
@@ -26,12 +26,11 @@ excludes
 
 # Autotools
 
-Makefile.in
 autom4te.cache
 aclocal.m4
 compile
-configure
 depcomp
 install-sh
 missing
 stamp-h1
+config.log
