Better makefile/configure

--- a/Makefile.in
+++ b/Makefile.in
@@ -1,11 +1,12 @@
-CC=clang
-
-CFLAGS=/usr/local/lib/libcurl.so /usr/lib/libncurses.so -I/usr/local/include
+CC=@CC@
+CFLAGS=@CFLAGS@
+LIBS=@LIBS@
+LDFLAGS=@LDFLAGS@
 
 all: nagnu
 
 nagnu: src/nagnu.c
-	$(CC) $(CFLAGS) src/nagnu.c src/excludes.c src/arguments.c src/getconf.c -o nagnu
+	$(CC) $(CFLAGS) $(LDFLAGS) src/nagnu.c src/excludes.c src/arguments.c src/getconf.c -o nagnu $(LIBS)
 
 clean:
 	rm -f nagnu
